--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   
   responsive_builder: ^0.7.1
   mini_music_visualizer: ^1.1.4
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -29,5 +30,8 @@ flutter_gen:
 
 flutter:
   uses-material-design: true
+
+  assets:
+  - .env
 
   
